Fixed a few layout problems

--- a/style.css
+++ b/style.css
@@ -294,6 +294,6 @@ h1, h2, h3, h4 {
     .nav-menu.active{
         position: static;
         height: auto;
-        margin-bottom: 0;
+        margin: 0;
     }
 }
